# distributed-challenge

./: LICENSE  README.md  distributed.cabal  nodes.txt  run-many-peers.sh  run-peer.sh  run-remote-peer.sh  stack.yaml
src/: Challenge.hs  DistribUtils.hs  Ping.hs
src/Challenge/: Node.hs  Types.hs  Worker.hs
src/Challenge/Worker/: Types.hs
src/Control/Distributed/Process/: Ext.hs
src/Control/Monad/: HandleMsg.hs
src/Data/: MsgId.hs  RandomNumber.hs  StrictPair.hs
