name:
  distributed
version:
  0.1.0.0
-- synopsis:
-- description:
license:
  BSD3
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  serg.foo@gmail.com
build-type:
  Simple
cabal-version:
  >=1.16

executable ping
  main-is:
    Ping.hs
  build-depends:
    base >=4.8 && <5,
    distributed-process
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
    -main-is Ping

