name:
  distributed
version:
  0.1.0.0
license:
  BSD3
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  serg.foo@gmail.com
build-type:
  Simple
cabal-version:
  >=1.16

executable challenge
  main-is:
    Challenge.hs
  build-depends:
    base >=4.8 && <5,
    -- For instances based on Generic
    binary >= 0.6.3.0,
    bytestring,
    containers,
    distributed-process,
    distributed-static,
    exceptions,
    filepath,
    microlens >= 0.4.7.0,
    microlens-ghc >= 0.4,
    microlens-mtl >= 0.1,
    microlens-th >= 0.4.1.0,
    mtl,
    network,
    network-transport,
    network-transport-tcp,
    optparse-applicative,
    random,
    semigroups,
    template-haskell
  other-modules:
    Control.Monad.HandleMsg
    Data.MsgId
    Data.RandomNumber
    Data.StrictPair
    DistribUtils
    Challenge.Node
    Challenge.Types
    Challenge.Worker
    Challenge.Worker.Types
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
    -threaded
    -main-is Challenge

